force-app/main/default/objects/Target__c/fields/Base_Year_Approach__c.field-meta.xml
<CustomField>
    <fullName>Base_Year_Approach__c</fullName>
    <label>Base Year Approach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Rolling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>