force-app/main/default/objects/Target__c/fields/Gap__c.field-meta.xml
<CustomField>
    <fullName>Gap__c</fullName>
    <formula>Target_GHG__c - Total_Emissions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>