force-app/main/default/objects/Target__c/fields/Planned_Offsets__c.field-meta.xml
<CustomField>
    <fullName>Planned_Offsets__c</fullName>
    <label>Planned Offsets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>