force-app/main/default/objects/Target__c/fields/Target_GHG__c.field-meta.xml
<CustomField>
    <fullName>Target_GHG__c</fullName>
    <label>Target GHG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>