force-app/main/default/objects/Target__c/fields/Target_Level__c.field-meta.xml
<CustomField>
    <fullName>Target_Level__c</fullName>
    <label>Target Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>