force-app/main/default/objects/Target__c/fields/Target_Plan__c.field-meta.xml
<CustomField>
    <fullName>Target_Plan__c</fullName>
    <label>Target Plan</label>
    <referenceTo>Target_Plan__c</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>