force-app/main/default/objects/Target__c/fields/Total_Purchased_Offsets__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchased_Offsets__c</fullName>
    <label>Total Purchased Offsets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>